Melhorando a visualização das categorias
