# api/app/serializers/categoria_serializer.rb
@@ -1,4 +1,8 @@
 class CategoriaSerializer < ActiveModel::Serializer
-  attributes :id, :nome, :slug
-  has_many :produtos
+  attributes  :slug, :nome
+  has_many :produtos, if: :include_produtos?
+
+  def include_produtos?
+    @instance_options[:include_produtos]
+  end
 end
